{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 81,
  "lineage": "40374b99-5c9b-01de-5992-e7c5174a10e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:internet-gateway/igw-08ce11314560aaf58",
            "id": "igw-08ce11314560aaf58",
            "owner_id": "827913617635",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-18-loggen-igw"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-18-loggen-igw",
              "Project": "de-ai-18-loggen",
              "Purpose": "로그 제너레이터"
            },
            "vpc_id": "vpc-0e26c6bef29dc3d05"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "igw-08ce11314560aaf58",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ce11314560aaf58",
            "id": "r-rtb-0f8aa2370bef46d031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f8aa2370bef46d03",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f8aa2370bef46d03"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:route-table/rtb-0f8aa2370bef46d03",
            "id": "rtb-0f8aa2370bef46d03",
            "owner_id": "827913617635",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08ce11314560aaf58",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "de-ai-18-loggen-public-rt"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-18-loggen-public-rt",
              "Project": "de-ai-18-loggen",
              "Purpose": "로그 제너레이터"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e26c6bef29dc3d05"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "rtb-0f8aa2370bef46d03",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce0b8fe30620d630",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f8aa2370bef46d03",
            "subnet_id": "subnet-05cfb281f1c25062a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "rtbassoc-0ce0b8fe30620d630",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-043bc9f790baf0044",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f8aa2370bef46d03",
            "subnet_id": "subnet-0a27ecce80eb53844"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "rtbassoc-043bc9f790baf0044",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:security-group/sg-0a6b958203e8a9830",
            "description": "Security group for Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6b958203e8a9830",
            "ingress": [],
            "name": "de-ai-18-loggen-fargate-sg",
            "name_prefix": "",
            "owner_id": "827913617635",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "de-ai-18-loggen-fargate-sg"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-18-loggen-fargate-sg",
              "Project": "de-ai-18-loggen",
              "Purpose": "로그 제너레이터"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e26c6bef29dc3d05"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "sg-0a6b958203e8a9830",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:subnet/subnet-05cfb281f1c25062a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cfb281f1c25062a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827913617635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-18-loggen-public-1",
              "Type": "loggen-public"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-18-loggen-public-1",
              "Project": "de-ai-18-loggen",
              "Purpose": "로그 제너레이터",
              "Type": "loggen-public"
            },
            "vpc_id": "vpc-0e26c6bef29dc3d05"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "subnet-05cfb281f1c25062a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:subnet/subnet-0a27ecce80eb53844",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a27ecce80eb53844",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827913617635",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-18-loggen-public-2",
              "Type": "loggen-public"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-18-loggen-public-2",
              "Project": "de-ai-18-loggen",
              "Purpose": "로그 제너레이터",
              "Type": "loggen-public"
            },
            "vpc_id": "vpc-0e26c6bef29dc3d05"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "subnet-0a27ecce80eb53844",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.this",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:vpc/vpc-0e26c6bef29dc3d05",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0d1776c3c50134e58",
            "default_route_table_id": "rtb-050e386e5a2ef8cfe",
            "default_security_group_id": "sg-0239d227bc94eb845",
            "dhcp_options_id": "dopt-01ecc933ab1a152f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e26c6bef29dc3d05",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050e386e5a2ef8cfe",
            "owner_id": "827913617635",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "de-ai-18-loggen-vpc"
            },
            "tags_all": {
              "ManageBy": "Terraform",
              "Name": "de-ai-18-loggen-vpc",
              "Project": "de-ai-18-loggen",
              "Purpose": "로그 제너레이터"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "vpc-0e26c6bef29dc3d05",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:827913617635:security-group-rule/sgr-0d770ed88866ea567",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d770ed88866ea567",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-northeast-2",
            "security_group_id": "sg-0a6b958203e8a9830",
            "security_group_rule_id": "sgr-0d770ed88866ea567",
            "tags": null,
            "tags_all": {
              "ManageBy": "Terraform",
              "Project": "de-ai-18-loggen",
              "Purpose": "로그 제너레이터"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "827913617635",
            "id": "sgr-0d770ed88866ea567",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_security_group.fargate",
            "aws_vpc.this"
          ]
        }
      ]
    }
  ]
}